--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<div id="end"></div>	
 
 	<article id="contacts">
-		<p id="dsC">LukeTheDuke420#7313</p>
+		<p id="dsC">LukeTheDuke#7313</p>
 		<a id="twC" href="https://twitter.com/luketheduke_kr" target="_blank" rel="noopener noreferrer">@luketheduke_kr</a>
 	</article>
 
