--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Luke's Krunker CSS</title>
 	<meta charset="UTF-8">
+	<meta http-equiv="refresh" content="0;url=https://luketheduke.xyz"> 
 	<meta name="description" content="sake.design: krunker css commissions">
 	<meta name="keywords" content="krunker, css, free, kr, commission">
 	<meta name="author" content="LukeTheDuke">
