--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Luke's Krunker CSS</title>
 	<meta charset="UTF-8">
-	<meta http-equiv="refresh" content="0;url=https://luketheduke.xyz"> 
 	<meta name="description" content="sake.design: krunker css commissions">
 	<meta name="keywords" content="krunker, css, free, kr, commission">
 	<meta name="author" content="LukeTheDuke">
@@ -22,7 +21,60 @@
 
 <body>
 	<header>
-		<div id="headerTitleKe">Soon</div>
+		<div id="headerTitle"><div>Sa</div></div>
+		<div id="headerTitleKe">ke</div>
 	</header>
+
+	<article>
+		<p>Hi, my name's Luke and I do Krunker CSS commissions. I especially love recreating other game's UIs in Krunker.</p>
+	</article>
+	
+	<div id="gallery">
+		<div>
+			<img src="img/showcase1.webp" class="cImg1" onclick="openImage(0)">
+			<img src="img/showcase2.webp" class="cImg1" onclick="openImage(1)">
+		</div>
+		<div>
+			<img src="img/showcase3.webp" class="cImg1" onclick="openImage(2)">
+			<img src="img/showcase4.webp" class="cImg1" onclick="openImage(3)">
+		</div>		
+	</div>
+
+	<table>
+		<thead>
+			<td>Pricing</td>
+		</thead>
+		<tbody>
+			<tr>	<td class="tL">Regular / Edits</td>	<td class="tR">20usd+</td>		</tr>
+			<tr>	<td class="tL">High Quality</td>	<td class="tR">50usd+</td>		</tr>
+			<tr>	<td class="tL">Maximum Quality</td>	<td class="tR">100usd+</td>		</tr>
+		</tbody>
+	</table>
+
+	<article id="importantInfo">
+		<p class="title">Important Info</p>
+		<p>- All prices are negotiable, though I do not accept items/KR</p>
+		<p>- I charge a 10% upfront cost. Payment preferred via Paypal or cryptocurrency</p>
+		<p>- Please bring inspiration/sketches of your desired design</p>
+	</article>
+
+	<div id="end"></div>	
+
+	<article id="contacts">
+		<p id="dsC">LukeTheDuke#7313</p>
+		<a id="twC" href="https://twitter.com/luketheduke_kr" target="_blank" rel="noopener noreferrer">@luketheduke_kr</a>
+	</article>
+
+	<div id="myModal" class="modal">
+		<span class="close">&times;</span>
+		<img src="img/showcase1.webp" class="mImg">
+		<img src="img/showcase2.webp" class="mImg">
+		
+		<img src="img/showcase3.webp" class="mImg">
+		<img src="img/showcase4.webp" class="mImg">
+	</div>
+
+	<div id="secretButton" onclick="secret()"></div>
+	<script src="js/modal.js"></script>
 </body>
 </html>
